Tweaked some changes

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <li><a href="https://apply.hackclub.com/en-US/b6iGqXEXQSMG1W/nFWH6OGlCgizQ3"> Join</a></li>
         </ul>
       </div>
-      <div class="footer_child">
+      <div class="footer_child fc1">
         <ul>
           <li class="first">Contact us</li>
           <li>SISTec Gandhi Nagar Campus
