--- a/holi.html
+++ b/holi.html
@@ -61,10 +61,10 @@ color: white}
 
 
 
-@media only screen and (max-width:450px) {
+@media only screen and (max-width:720px) {
 .holi2ndimg{
-    height: auto;
-    width: 450px;
+    height: 800px;
+    width: 720px;
 }
 
 }
